# bjt-cpu-8bit

./: .gitignore  README.md  specification.txt
assembler/: assembler.cpp  counter.asm  multiply.asm
emulator/: CMakeLists.txt
emulator/include/: bjtcpu.hpp  opcodes.hpp
emulator/src/: bjtcpu.cpp  main.cpp
logisim-prototypes/: .cpu-rebuild.circ.autosave  cpu-rebuild.circ  cpu.circ
pcb/reg/: reg.kicad_pcb  reg.kicad_sch  untitled.kicad_sch
pcb/reg/gerbers/: reg-B_Cu.gbr  reg-B_Mask.gbr  reg-B_Paste.gbr  reg-B_Silkscreen.gbr  reg-Edge_Cuts.gbr  reg-F_Cu.gbr  reg-F_Mask.gbr  reg-F_Paste.gbr  reg-F_Silkscreen.gbr  (+3 more)
pcb/regSMD/: reg.kicad_pcb  reg.kicad_sch  untitled.kicad_sch
pcb/regv4/: #auto_saved_files#  _autosave-regv4.kicad_sch  dflipfop.kicad_sch  regv4.kicad_pcb  regv4.kicad_prl  regv4.kicad_pro  regv4.kicad_sch  regv4.kicad_sch-bak  ~regv4.kicad_sch.lck
programs/: ball.asm  counter.asm  counter.bin.bak  demo.asm  main.asm  shl.asm  video.asm
programs/stdlib/: stdlib.asm  stdvideo.asm
reg/: reg.kicad_pcb  reg.kicad_pro  reg.kicad_sch  untitled.kicad_sch
reg/gerbers/: reg-B_Silkscreen.gbr  reg-Edge_Cuts.gbr  reg-F_Cu.gbr  reg-F_Silkscreen.gbr  reg-NPTH.drl
regSMD/: reg-top-pos.csv  reg.csv  reg.kicad_pcb  reg.kicad_prl  reg.kicad_pro  reg.kicad_sch  untitled.kicad_sch  ~reg.kicad_pcb.lck
regSMD/gerbers/: reg-B_Cu.gbr  reg-B_Mask.gbr  reg-B_Paste.gbr  reg-B_Silkscreen.gbr  reg-Edge_Cuts.gbr  reg-F_Cu.gbr  reg-F_Mask.gbr  reg-F_Paste.gbr  reg-F_Silkscreen.gbr  reg-NPTH.drl  reg-PTH.drl  reg-job.gbrjob
regSMD/production/: designators.csv
(+15 files in other folders)
